--- a/assignment_4/assignment-4.ipynb
+++ b/assignment_4/assignment-4.ipynb
@@ -22,9 +22,9 @@
     "'''\n",
     "Submitter : JESOON KANG, 20170937 Dept.of CSE\n",
     "\n",
-    "Data : 2019. 10. 9\n",
+    "Data : 2019. 10. 30\n",
     "\n",
-    "Assignment 3.\n",
+    "Assignment 4.\n",
     "\n",
     "\n",
     "\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 80,
    "metadata": {
     "scrolled": true
    },
@@ -197,6 +197,233 @@
     "target_Y = training_labels\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1027, 10000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(input_X.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Data :  1027\n",
+      "Num of Data's Feature :  10000\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_acc_of_list(yhat,target_Y) :\n",
+    "    count = 0\n",
+    "    for a,b in zip(yhat,target_Y) :\n",
+    "        if (a >= 0.5) :\n",
+    "            if b == 1 :\n",
+    "                count +=1\n",
+    "        else :\n",
+    "            if b == 0 :\n",
+    "                count +=1\n",
+    "    return count / len(yhat)\n",
+    "def is_correct(yhat,t) :\n",
+    "    if yhat >= 0.5 :\n",
+    "        if t == 1 :\n",
+    "            return 1\n",
+    "        else :\n",
+    "            return 0\n",
+    "    else :\n",
+    "        if t == 0 :\n",
+    "            return 1\n",
+    "        else :\n",
+    "            return 0 \n",
+    "            \n",
+    "def get_loss(yhat,t) :\n",
+    "    \n",
+    "    return -(t/yhat - (1-t)/(1-yhat))\n",
+    "    #return ((-t+0.1) * np.log(yhat+0.1) - (1-t+0.1) * np.log(1-yhat+0.1))\n",
+    "\n",
+    "def sigmoid_der(x) :\n",
+    "    return sigmoid(x)*(1-sigmoid(x))\n",
+    "\n",
+    "def get_error(yhat,t) :\n",
+    "    return 0.5* ((t-yhat)**2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Data :  1027\n",
+      "Num of Data's Feature :  10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_data_size = input_X.shape[0]\n",
+    "print(\"Input Data : \",m)\n",
+    "feature_size = input_X.shape[1]\n",
+    "print(\"Num of Data's Feature : \" ,feature_size)\n",
+    "\n",
+    "first_layer_size = 100\n",
+    "second_layer_size = 50\n",
+    "\n",
+    "w = torch.ones(first_layer_size,input_data_size,feature_size)\n",
+    "a = torch.Tensor(first_layer_size,input_data_size,1)\n",
+    "# 웨이트의 개수, 각 웨이트 하나 당 개수, 웨이트의 피쳐 갯수,\n",
+    "u = torch.Tensor(second_layer_size,first_layer_size,1)\n",
+    "v = torch.Tensor(1,second_layer_size,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1027, 10000])\n",
+      "torch.Size([100, 1027, 10000])\n",
+      "torch.Size([1027, 10000])\n",
+      "tensor([[1., 1., 1.,  ..., 1., 1., 1.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        ...,\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "        [0., 0., 0.,  ..., 0., 0., 0.]])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "1D tensors expected, got 3D, 2D tensors at ../aten/src/TH/generic/THTensorEvenMoreMath.cpp:723",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-112-041d1b3b6232>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m#z_1 = torch.dot(input_X,w)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mz_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtmp3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: 1D tensors expected, got 3D, 2D tensors at ../aten/src/TH/generic/THTensorEvenMoreMath.cpp:723"
+     ]
+    }
+   ],
+   "source": [
+    "learning_rate = 0.01\n",
+    "log_loss = []\n",
+    "log_acc = []\n",
+    "log_iter = []\n",
+    "\n",
+    "#input_X_1 = input_X.expand(1,1027,10000)\n",
+    "input_X = torch.Tensor(input_X)\n",
+    "print(input_X.shape)\n",
+    "print(w.shape)\n",
+    "\n",
+    "tmp = torch.ones(1,10000)\n",
+    "tmp2 = torch.zeros(1026,10000)\n",
+    "tmp3 = torch.cat([tmp,tmp2])\n",
+    "print(tmp3.shape)\n",
+    "#input_X_2 = torch.zeros(1026,10000)\n",
+    "\n",
+    "print(tmp3)\n",
+    "\n",
+    "#z_1 = torch.dot(input_X,w)\n",
+    "z_1 = torch.dot(w,tmp3.T)\n",
+    "print(z_1.shape)\n",
+    "print(z_1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         ...,\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+      "\n",
+      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         ...,\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+      "\n",
+      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         ...,\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+      "\n",
+      "        ...,\n",
+      "\n",
+      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         ...,\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+      "\n",
+      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         ...,\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+      "\n",
+      "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         ...,\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+      "         [0., 0., 0.,  ..., 0., 0., 0.]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(z_1)\n"
    ]
   },
   {
@@ -373,38 +600,6 @@
     }
    ],
    "source": [
-    "def get_acc_of_list(yhat,target_Y) :\n",
-    "    count = 0\n",
-    "    for a,b in zip(yhat,target_Y) :\n",
-    "        if (a >= 0.5) :\n",
-    "            if b == 1 :\n",
-    "                count +=1\n",
-    "        else :\n",
-    "            if b == 0 :\n",
-    "                count +=1\n",
-    "    return count / len(yhat)\n",
-    "def is_correct(yhat,t) :\n",
-    "    if yhat >= 0.5 :\n",
-    "        if t == 1 :\n",
-    "            return 1\n",
-    "        else :\n",
-    "            return 0\n",
-    "    else :\n",
-    "        if t == 0 :\n",
-    "            return 1\n",
-    "        else :\n",
-    "            return 0 \n",
-    "            \n",
-    "def get_loss(yhat,t) :\n",
-    "    \n",
-    "    return -(t/yhat - (1-t)/(1-yhat))\n",
-    "    #return ((-t+0.1) * np.log(yhat+0.1) - (1-t+0.1) * np.log(1-yhat+0.1))\n",
-    "\n",
-    "def sigmoid_der(x) :\n",
-    "    return sigmoid(x)*(1-sigmoid(x))\n",
-    "\n",
-    "def get_error(yhat,t) :\n",
-    "    return 0.5* ((t-yhat)**2)\n",
     "\n",
     "u = np.zeros((10000,50))\n",
     "v = np.zeros((50,10))\n",
